--- a/package.json
+++ b/package.json
@@ -1,29 +1,20 @@
 {
   "name": "node-js-sample",
-  "version": "0.2.0",
+  "version": "1.0.0",
   "description": "A sample Node.js app using Express 4",
   "main": "index.js",
+  "type": "module",
+   "dependencies": {
+    "express": "^4.17.1"
+  },
+  "devDependencies": {
+    "mocha": "^8.3.2",
+    "chai": "^4.3.4"
+  },
   "scripts": {
-    "start": "node index.js"
+    "start": "node index.js",
+    "test": "mocha"
   },
-  "dependencies": {
-    "express": "^4.13.3"
-  },
-  "engines": {
-    "node": "4.0.0"
-  },
-  "repository": {
-    "type": "git",
-    "url": "https://github.com/Abhishek08/node-js-sample.git"
-  },
-  "keywords": [
-    "node",
-    "heroku",
-    "express"
-  ],
-  "author": "Mark Pundsack",
-  "contributors": [
-    "Zeke Sikelianos <zeke@sikelianos.com> (http://zeke.sikelianos.com)"
-  ],
-  "license": "MIT"
+  "author": "",
+  "license": "ISC"
 }
